flux/apps/scribe/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scribe

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scribe

  template:
    metadata:
      labels:
        app: scribe

    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database

      containers:
        - name: scribe
          image: ghcr.io/nint8835/scribe

          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

          volumeMounts:
            - mountPath: /data
              name: database

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            # TODO: Make true once the container image runs as non-root
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "512Mi"
