flux/apps/scribe/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scribe

spec:
  selector:
    app: scribe

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
