flux/apps/scribe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scribe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - scribe.bootleg.technology
      secretName: scribe-bootleg-technology
  rules:
    - host: scribe.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scribe
                port:
                  name: http
